Edited wiki page ConsoleUsage through web user interface.

--- a/wiki/ConsoleUsage.wiki
+++ b/wiki/ConsoleUsage.wiki
@@ -104,3 +104,34 @@ http://danbooru.donmai.us/data/85ba43a3470236f16807d102ebb9befe.jpg
 http://simg2.gelbooru.com/images/2080/7a3fa58e9e669c2fdc2fb6596e13ed40.png
 http://simg2.gelbooru.com/images/2077/eea3d1e72f2f33521ccf68874b408d38.png
 }}}
+
+You can use the "-i" or "--perpage" option to choose how many images per page the program should return. Default value is 20.
+
+You can use the "-m" or "--max" option to choose how many images you want to return. By default, the program returns everything it finds on the requested pages.
+
+Mixed together, they can allow to get multiple pages for a single request. For example, "-i 2 -m 10" will return the same result as "-i 10", but will use 5 requests to do so.
+{{{
+./grabber.exe -c -t "inugami_kira" -s "danbooru.donmai.us" -i 10 --return-images
+http://danbooru.donmai.us/data/3fccf5d7c6a0fe066cb0c6d3d584dba4.jpg
+http://danbooru.donmai.us/data/92bde7d2b5b5b045e3d03e2544499f4b.jpg
+http://danbooru.donmai.us/data/27de992712f6bae5c03357cf4e63ea0a.jpg
+http://danbooru.donmai.us/data/3412be9340651fe39c09bc1405d4b9c2.jpg
+http://danbooru.donmai.us/data/861e7414086026f3f1d3dfe11dfe9237.jpg
+http://danbooru.donmai.us/data/eb35c0dee3e05ffeda18eba4917c33ff.jpg
+http://danbooru.donmai.us/data/092d892110825a6cbdf1bde24241c030.jpg
+http://danbooru.donmai.us/data/dacde25c81be108389854c32f1bdeb3d.jpg
+http://danbooru.donmai.us/data/100cd43adb60f390309d14c1ce8bb853.jpg
+http://danbooru.donmai.us/data/7a3fa58e9e669c2fdc2fb6596e13ed40.jpg
+
+./grabber.exe -c -t "inugami_kira" -s "danbooru.donmai.us" -i 2 -m 10 --return-images
+http://danbooru.donmai.us/data/3fccf5d7c6a0fe066cb0c6d3d584dba4.jpg
+http://danbooru.donmai.us/data/92bde7d2b5b5b045e3d03e2544499f4b.jpg
+http://danbooru.donmai.us/data/27de992712f6bae5c03357cf4e63ea0a.jpg
+http://danbooru.donmai.us/data/3412be9340651fe39c09bc1405d4b9c2.jpg
+http://danbooru.donmai.us/data/861e7414086026f3f1d3dfe11dfe9237.jpg
+http://danbooru.donmai.us/data/eb35c0dee3e05ffeda18eba4917c33ff.jpg
+http://danbooru.donmai.us/data/092d892110825a6cbdf1bde24241c030.jpg
+http://danbooru.donmai.us/data/dacde25c81be108389854c32f1bdeb3d.jpg
+http://danbooru.donmai.us/data/100cd43adb60f390309d14c1ce8bb853.jpg
+http://danbooru.donmai.us/data/7a3fa58e9e669c2fdc2fb6596e13ed40.jpg
+}}}
