Edited wiki page Downloads through web user interface.

--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -7,10 +7,14 @@ You can find the new downloads list [http://www.bionus.fr.cr/imgbrd-grabber/down
 
 = Direct links =
 == Windows ==
-  * [http://www.bionus.fr.cr/imgbrd-grabber/downloads/Grabber_3.4.1.exe 3.4.1] <font color="green">Featured</font>
+  * [http://www.bionus.fr.cr/imgbrd-grabber/downloads/Grabber_4.0.a.exe 4.0.0 alpha]
+  * [http://www.bionus.fr.cr/imgbrd-grabber/downloads/Grabber_3.4.1.exe 3.5.0] <font color="green">Featured</font>
+  * [http://www.bionus.fr.cr/imgbrd-grabber/downloads/Grabber_3.4.1.exe 3.4.1]
   * [http://www.bionus.fr.cr/imgbrd-grabber/downloads/Grabber_3.3.0.exe 3.3.0]
   * [http://www.bionus.fr.cr/imgbrd-grabber/downloads/Grabber_3.2.6.exe 3.2.6]
   * [http://www.bionus.fr.cr/imgbrd-grabber/downloads/Grabber_3.2.1.exe 3.2.1]
+[http://www.bionus.fr.cr/imgbrd-grabber/downloads/Grabber.exe Latest snapshot]
+
 == Linux ==
   * [http://www.bionus.fr.cr/imgbrd-grabber/downloads/Grabber_3.2.6.tar.gz 3.2.6] <font color="green">Featured</font>
   * [http://www.bionus.fr.cr/imgbrd-grabber/downloads/Grabber_3.1.4.tar.gz 3.1.4]
