--- a/wiki/PortableVersion.wiki
+++ b/wiki/PortableVersion.wiki
@@ -9,6 +9,10 @@ If you want to be able to use the program anywhere without installation, for exa
 
 By default, settings and executable files are located in two different locations. Settings are in:
 {{{
+C:/Users/%USERNAME%/AppData/Local/Bionus/Grabber
+}}}
+Or, if you are using an old version of the program:
+{{{
 "C:/Users/%USERNAME%/Grabber"
 }}}
 And the executable files are in:
